Style: fixed spacing and paddings of navbar, header and footer

--- a/app/components/homeSession/Chargers/style.scss
+++ b/app/components/homeSession/Chargers/style.scss
@@ -1,4 +1,6 @@
 #session-chargers {
+    margin: 64px 0;
+
     #chargers-header {
         display: flex;
         flex-direction: column;
