--- a/app/components/homeSession/Footer/style.scss
+++ b/app/components/homeSession/Footer/style.scss
@@ -16,8 +16,8 @@ footer {
         max-width: var(--viewMaxWidth);
 
         #footer-inside-box {
-            margin: 50px;
-            padding: 50px;
+            margin: 48px;
+            padding: 48px;
             box-sizing: border-box;
             backdrop-filter: blur(20px);
             background-color: var(--whiteTransparent10);
