--- a/app/components/homeSession/Header/style.scss
+++ b/app/components/homeSession/Header/style.scss
@@ -5,14 +5,20 @@ header {
     overflow: hidden;
     padding-top: 200px;
     background-image: linear-gradient(var(--backgroundColor3) 40%, var(--backgroundColor1));
+    margin-bottom: 64px;
 
     #header-inside-box {
         max-width: var(--viewMaxWidth);
         overflow: hidden;
 
+        hr {
+            border: 1px solid var(--backgroundColor3);
+            margin: 64px 0;
+        }
+
         #header-banner {
             width: 100%;
-            height: 600px;
+            height: 580px;
             display: flex;
             justify-content: center;
             align-items: center;
